app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
} */
@font-face {
  font-family: FarsiFont;
  src: url("../public/fonts/IRANYekanWeb.woff");
  src: url("../public/fonts/IRANYekanWeb.eot");
  src: url("../public/fonts/IRANYekanWeb.woff2");
  src: url("../public/fonts/IRANYekanWeb.ttf");
}
@font-face {
  font-family: Farsinum;
  src: url("../public/fonts/Tanha-FD.eot");
  src: url("../public/fonts/Tanha-FD.ttf");
  src: url("../public/fonts/Tanha-FD.woff");
  src: url("../public/fonts/Tanha-FD.woff2");
}

* {
  direction: rtl;
  font-family: FarsiFont,Farsinum ,sans-serif ,Arial, Helvetica !important;
}

body {
  background: var(--background);
  color: var(--foreground);
  direction: rtl;
}
.rastchin * {
  direction: ltr !important;
}

/* head */
.register{
  color: black !important;
  font-size: medium !important;
}
.customDialogClose{
  color: black;
}
.LocationOnIcon{
  color: #880808;
}
.city{
  color: black !important;
  font-size: 14px !important;
}
.searchIcon{
  color: red;
}
.boxshadowHead{
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
}

.borderSearch{
  border-bottom: 4px solid rgb(10, 248, 216);
}
.borderSubSearch{
  border-bottom: 1px solid gray;
}

.bordercorrectaddress{
  border: 1px solid green;
}
.borderskeleton{
  border: 1px solid lightgray;
}
.borderskeletonmainpage{
  border: 1px solid #bdbdbd;
}
/* head */

/* appmaps */
.mapboxgl-map{
  width: 100% !important;
  height: 100% !important;
}
/* .mapboxgl-popup{
  visibility: visible;
  display: block;
  width: 150px;
  height: 150px;
} */

#searchMap {
  height: 30px;
}
/* textarea:focus, */
.search-box__itemMap > input:focus {
  outline: none;
}

.containerMap {
  color: rgba(0, 0, 0, 0.7);
  background-color: rgba(255, 255, 255, 0);
  direction: rtl;
  text-align: right;
  margin-top: 5px;  
  /* font-size: 1.4rem; */
}

.search-boxMap {
  position: absolute;
  /* bottom: 33%; */
  left: 0;
  z-index: 1000;
}

.search-box__itemMap {
  background-color: white;
  margin-top: 3px;
  border-top: none;
  border: 1px solid #a8a7a7;
  border-radius: 5px;
  width: 100% !important;
}

.search-resultsMap {
  overflow: auto;
  max-height: 40vh;
  /* display: none; */
}

.search-result-itemMap {
  border-bottom: 1px solid #ccc;
  padding: 10px;
  cursor: pointer;
}
.search-result-itemMap img {
  width: 20px;
  margin-left: 5px;
}
.search-result-item-titleMap {
  font-weight: bolder;
}
.search-result-item-addressMap {
  font-size: 1rem;
}

.clear-seachMap {
  cursor: pointer;
  position: absolute;
  left: 20px;
  padding: 6px;
  /* display: none; */
}

/* .btn-seachMap {
  background-color: #ff0871;
  height: 40px;
  width: 60px;
  text-align: center;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  color: white;
  cursor: pointer;
  position: absolute;
  left: 20px;
  justify-content: center;
  align-items: center;
  border-right: 1px solid #a8a7a7;
  line-height: 40px;
} */

/* appmaps */

/* mobile menu  */

.megaMenu{
  transition: 2s;
}
.slowtransition:hover .megaMenu{
  transition: 600ms;
}
.border-b-menu{
  border-bottom: 2px solid rgb(0, 238, 255);
}
.subnav:hover{
    border-right: 1px solid lightgray;
    border-left: 1px solid lightgray;
    border-top: 1px solid lightgray;
    box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1),
    /* Top shadow */ -5px 0 10px rgba(0, 0, 0, 0.1),
    /* Left shadow */ 5px 0 10px rgba(0, 0, 0, 0.1); /* Right shadow */;
    transition: 600ms;
}

/* Subnav button */
.subnav .subnavbtn {
  /* outline: none; */
  color: #666666 !important;
  :hover{
    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
  }
}
/* Style the subnav content - positioned absolute */
.subnav-content {
  background-color: white;
   /* height: 400px; */
  z-index: 1;
  display: flex;
}

/* When you move the mouse over the subnav container, open the subnav content */
.subnav:hover .subnav-content {
   /* display: flex !important; */
  visibility: visible !important;
  transition: 600ms !important;
  opacity: 1 !important;
  height: 400px !important;
  border-bottom:2px solid #55DCD8 !important;
}
.boxshadowmenu {
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
}
.bordermenu {
  border-top: 1px solid lightgrey;
}
.itemshadow {
  box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.2),
    /* Top shadow */ -5px 0 5px rgba(0, 0, 0, 0.2),
    /* Left shadow */ 5px 0 5px rgba(0, 0, 0, 0.2); /* Right shadow */
}

.with-separator::after {
  content: "|";
  margin: 0 0.7rem;
}
.with-separator:hover::after{
  color: black;
}


.toolbar{
  position: fixed;
  bottom: 0;
  height: 44px;
  width: 100%;
  box-sizing: border-box;
  font-size: 17px;
  margin: 0;
  z-index: 500;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}
.navbar-inner, .toolbar-inner{
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  padding: 0 8px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
}
.toolbar-inner svg{
  filter: drop-shadow(0 -1px 6px rgba(0, 0, 0, 0.2));
  position: absolute;
  right: 50%;
  bottom: -2px;
  transform: translateX(50%);
  fill: white;
}
/* ... */

